@FunctionalInterface
public interface Command
{
    void execute();
}
